新添加两个python方法跑object01两数之和

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,21 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
             "type": "java",
-            "name": "CodeLens (Launch) - Subject01Solution",
+            "name": "Debug (Launch) - Current File",
             "request": "launch",
-            "mainClass": "Subject01Solution",
-            "projectName": "LeetCode-Python&Java_fad853a7"
+            "mainClass": "${file}"
+        },
+        
+        {
+            "name": "Python: 当前文件",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal"
         }
+
     ]
 }
