--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,31 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+
+        {
+            "type": "chrome",
+            "request": "attach",
+            "name": "Attach to Chrome",
+            "port": 9222,
+            "url": "http://192.168.1.105:8080",
+            "webRoot": "${workspaceFolder}"
+        },
+        {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Launch Chrome",
+            //"url": "http://192.168.1.105:8080",
+            "url": "${workspaceFolder}/index.html",
+            "webRoot": "${workspaceFolder}/index.html" // 指向的位置就是项目中文件位置
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - Subject09Solution",
+            "request": "launch",
+            "mainClass": "Subject09Solution",
+            "projectName": "LeetCode-Python-Java_fb3af82e"
+        },
         {
             "type": "java",
             "name": "CodeLens (Launch) - Subject07Solution",
